# cmake-tests

./: .gitignore  README.md
01_consumer/: build.sh
01_consumer/calculator/: CMakeLists.txt
01_generator_install-method/calc_lib/add_lib/: CMakeLists.txt  Config.cmake.in
01_generator_install-method/calc_lib/add_lib/src/: add.cpp
01_generator_install-method/calc_lib/mul_lib/: CMakeLists.txt
01_install-method_multiple-config.in-files/consumer/: build.sh
01_install-method_multiple-config.in-files/generator/calc_lib/: CMakeLists.txt  build.sh
01_install-method_multiple-config.in-files/generator/calc_lib/add_lib/: CMakeLists.txt
01_install-method_multiple-config.in-files/generator/calc_lib/mul_lib/: CMakeLists.txt
01_install-method_single-config.in-files/generator/calc_lib/: Config.cmake.in
01_install-method_single-config.in-files/generator/calc_lib/add_lib/: CMakeLists.txt
01_install-method_single-config.in-files/generator/calc_lib/mul_lib/: CMakeLists.txt
02_sub-director-method/: CMakeLists.txt  README.md
02_sub-director-method/consumer_calculator/: CMakeLists.txt
02_sub-director-method/generator_calc_lib/add_lib/: CMakeLists.txt
03_object_libraries/: README.md
03_object_libraries/consumer-executable/: CMakeLists.txt  Config.cmake.in  build.sh
03_object_libraries/consumer-sharedlib/: CMakeLists.txt  build.sh
03_object_libraries/consumer-sharedlib/src/: calc.cpp
03_object_libraries/generator/: build_add_and_mul.sh
03_object_libraries/generator/add_lib/: CMakeLists.txt  Config.cmake.in
03_object_libraries/generator/mul_lib/: CMakeLists.txt  Config.cmake.in
04_interface_libraries/: README.md
04_interface_libraries/consumer/: CMakeLists.txt  build.sh
04_interface_libraries/consumer/inc/: calc.h
04_interface_libraries/consumer/src/: ctool.cpp
04_interface_libraries/generator/: CMakeLists.txt  Config.cmake.in  build.sh
04_interface_libraries/generator/inc/: add.h  mul.h
cache-variable-demo/: CMakeLists.txt  README.md
conan_integration_test_1/: CMakeLists.txt  README.md  conanfile.txt  configure_build.sh
conan_integration_test_1/.devcontainer/: Dockerfile  devcontainer.json  setup.sh
conan_integration_test_1/src/: main.cpp
ctest_example/: CMakeLists.txt
ctest_example/all_about_aliases/: CMakeLists.txt
function/: CMakeLists.txt
function-macro/: CMakeLists.txt  main.cpp
function_macro/: CMakeLists.txt
install/: CMakeLists.txt  README.md  build.sh
install/calc_lib/: build.sh
install/calc_lib/add_lib/: CMakeLists.txt
install/calc_lib/mul_lib/: CMakeLists.txt  Config.cmake.in
install/calculator/: CMakeLists.txt
shared_lib_gen_consume_example/: CMakeLists.txt  build.py  gen.py  gen.sh
shared_lib_gen_consume_example/calc/: CMakeLists.txt
shared_lib_gen_consume_example/mymath/: CMakeLists.txt  add.h  mul.h
shared_lib_gen_consume_example/mymath/inc/: mymath_exports.h
shared_lib_hierarchy_of_lib_dependencies/: README.md  build.py
shared_lib_hierarchy_of_lib_dependencies/addsub/: CMakeLists.txt  add.h  sub.h
shared_lib_hierarchy_of_lib_dependencies/addsub/src/: sub.cpp
shared_lib_hierarchy_of_lib_dependencies/arithmeticop/: CMakeLists.txt  arithmetic_op.h
shared_lib_hierarchy_of_lib_dependencies/arithmeticop/src/: arithmetic_op.cpp
shared_lib_hierarchy_of_lib_dependencies/calc/: CMakeLists.txt  calc.cpp
shared_lib_hierarchy_of_lib_dependencies/muldiv/: CMakeLists.txt  div.h  mul.h
shared_lib_hierarchy_of_lib_dependencies/muldiv/src/: div.cpp
target_link_libs/: README.md
target_link_libs/calc_lib/: CMakeLists.txt
target_link_libs/calculator/: calc.cpp
